# RI_Autonomous_Overtaking

./: README.md
CARLA/: main.py  test.py  train.py
CARLA/Risk/collision_prediction/: coll_prediction.py  coll_prediction_scenegraph_extraction_config.yaml
CARLA/Risk/risk_assessment/: seq_assessment.py  seq_scenegraph_extraction_config.yaml  seq_sg_extraction_output.pkl
CARLA/Risk/visualization/: scenegraph_extraction_config.yaml  visualization.py
CARLA/agent/: DDPG_agent.py  __init__,py
CARLA/env/: __init__.py  sensors.py  world_env.py
CARLA/tracking/: __init__,py  tracker.py
CARLA/tracking/ROS 2/carla_ros_bridge/: CMakeLists.txt  package.xml  setup.py
CARLA/tracking/ROS 2/carla_ros_bridge/launch/: Multi_object_tracker.launch.py  carla_ros_bridge.launch  carla_ros_bridge.launch.py
CARLA/tracking/ROS 2/carla_ros_bridge/src/carla_ros_bridge/: bridge.py  carla_lidar_enricher.py  fusion.py  spawn_lidar.py
QCar/Risk/collision_prediction/: coll_prediction.py  coll_prediction_learning_config.yaml  coll_prediction_scenegraph_extraction_config.yaml  coll_prediction_sg_extraction_output.pkl
QCar/Risk/risk_assessment/: seq_learning_config.yaml  seq_scenegraph_extraction_config.yaml  sequence_assessment.py
QCar/Risk/visualization/: scenegraph_extraction_config.yaml  sg_extraction_output.pkl  visualization.py
QCar/qcar/launch/: qcar-cam.launch  qcar-cam2.launch  qcar-lite.launch  qcar.launch
QCar/qcar/src/: drive.py  image_saver.py  lidar_sector.py  lidarnode.py  qcarnode.py  rgbdnode.py  rgbdnode2.py
QCar/qcar/src/qcar/: product_QCar.py  q_essential.py
QCar/qcar/urdf/: qcar_model.xacro
QCar/rl_qcar_controller/: CMakeLists.txt  package.xml
QCar/rl_qcar_controller/launch/: rl_controller.launch
QCar/rl_qcar_controller/scripts/: rl_qcar_node.py
Risk_assessment/roadscene2vec/scene_graph/: relation_extractor.py  scene_graph.py
Risk_assessment/roadscene2vec/util/: visualizer.py
docs/: CARLA.html  QCar.html  index.html  search.js
docs/CARLA/: env.html  main.html  test.html  train.html
docs/CARLA/env/: sensors.html  world_env.html
(+6 files in other folders)
